# boggler

./: .gitignore  Cargo.toml  README.md  build.rs
boggler-core/: Cargo.toml  build.rs
boggler-core/bench/: sandbox.rs
boggler-core/src/: lib.rs
boggler-core/src/_/grid/: graph.rs
boggler-core/src/board/: mod.rs
boggler-core/src/board/simple/: cell.rs  mod.rs  neighbors.rs
boggler-core/src/charset/: english_alpha.rs  mod.rs
boggler-core/src/search/: mod.rs  valid.rs
boggler-core/src/trie/: from_words.rs  mod.rs  node.rs  serialize.rs
boggler-dictionary/: Cargo.toml  build.rs
boggler-dictionary/examples/: test.rs
boggler-dictionary/src/: lib.rs
data/: test_grid10x10_1.txt  test_grid4x4_1.txt  test_words10x10_1.txt  test_words4x4_1.txt
src/: main.rs  words.rs
src/_/: main.rs  permutation.rs  words.rs
src/board/: simple.rs
src/board/simple/: neighbors.rs
src/grid/: graph.rs  mod.rs  words.rs
src/trie/: charset.rs  mod.rs  node.rs
