[package]
name = "boggler-core"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "sandbox"
path = "../bench/sandbox.rs"
harness = false

[dependencies]
eyre = "0.6"
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.22"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
ureq = "2.4"
